# projeto-etl-case

./: .env  .gitignore  main.py  pyproject.toml
