[project]
name = "projeto-etl-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Grecov",email = "guilherme.grecov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.38.32,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
